set fixed width/height on track covers

--- a/static/css/track-player.css
+++ b/static/css/track-player.css
@@ -24,12 +24,11 @@
 }
 
 .tp-cover img {
-	width: 100%;
-	height: 100%;
+	width: var(--tp-cover-width);
+	height: var(--tp-cover-height);
 	object-fit: cover;
 	.user-drag: none;
 	-webkit-user-drag: none;
-	/* pointer-events: none; /1* Disables click interactions *1/ */
 }
 
 .tp-section {
